# SurveyGuru

./: LICENSE  README.md  setup.cfg  setup.py
surveyguru/: __init__.py  auto.py  survey.py
