[options]
python_requires = >=3.6
keywords = 
    survey
    automation
    data generation
packages = surveyguru
platforms = any
classifiers = 
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3